# binary-mcp

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUTURE_FEATURES.md  GITHUB_SETUP.md  INSTALL.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  SECURITY_ASSESSMENT.md  SESSION_NOTES.md  WINDBG_INTEGRATION_PLAN.md  install.ps1  install.py  pyproject.toml  quickstart.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: claude_code_config.example.json  claude_code_config.json  claude_desktop_config.json
docs/: X64DBG_ERROR_LOGGING.md  activity-log-plan.md  claude-code-setup.md  ghidra-mcp-defender-issues.md  opencode-issues.md  remote-quick-reference.md  remote-usage-guide.md  security.md  vr-workflow-enhancements.md  windbg-kernel-debugging.md  x64dbg-error-logging.md
samples/: test_malware.c  test_program.c
scripts/: generate_token.py
src/: server.py
src/engines/: __init__.py
src/engines/dynamic/: __init__.py  base.py  base_error_logger.py
src/engines/dynamic/windbg/: __init__.py  _dbgeng_callbacks_shim.py  allowlist.py  bridge.py  commands.py  error_logger.py  event_callbacks.py  kernel_types.py  output_parser.py  session_state.py  sympath.py
src/engines/dynamic/x64dbg/: ARCHITECTURE.md  __init__.py  bridge.py  commands.py  error_logger.py  pipe_protocol.h  view_errors.py
src/engines/dynamic/x64dbg/plugin/: CMakeLists.txt  CMakeLists_new.txt  README.md  commands.cpp  commands.h  debugger_state.cpp  debugger_state.h  event_system.cpp  event_system.h  http_server.cpp  http_server.h  plugin.cpp  plugin.h  plugin_new.cpp  x64dbg_stubs.cpp
src/engines/dynamic/x64dbg/server/: main.cpp
src/engines/session/: __init__.py  unified_session.py
src/engines/static/: __init__.py  base.py
src/engines/static/dotnet/: __init__.py  ilspy_runner.py
src/engines/static/ghidra/: analysis_session.py  analysis_store.py  error_logger.py  project_cache.py  runner.py
src/engines/static/ghidra/scripts/: core_analysis.py  enable_pdb_load.py
src/engines/static/python/: __init__.py  analyzer.py
src/ghidra/: runner.py
src/ghidra/scripts/: core_analysis.py
src/tools/: control_flow_tools.py  diff_tools.py  dispatch_tools.py  dotnet_tools.py  dynamic_tools.py  fid_tools.py  function_hash_tools.py  indirect_call_tools.py  malware_tools.py  pe_tools.py  reporting.py  review_tools.py  triage_tools.py  vt_tools.py  windbg_tools.py  yara_tools.py
src/transports/: __init__.py  sse_server.py
src/utils/: __init__.py  audit_log.py  auth.py  authenticode.py  binary_reader.py  carving.py  compatibility.py  config.py  crypto_analysis.py  formatters.py  patterns.py  pdb_fetcher.py  pseudocode_rules.py  rate_limit.py  security.py  similarity_hashes.py  stack_strings.py  structured_errors.py  tls.py
tests/: test_audit_log.py  test_auth.py  test_authenticode.py  test_binary_reader.py  test_cache_cleanup.py  test_carving.py  test_control_flow_tools.py  test_diff_tools.py  test_dispatch_tools.py  test_expand_callgraph.py  test_fid_tools.py  test_function_hash_tools.py  test_get_xrefs.py  test_ghidra_jython_detection.py  test_ghidra_perf.py  test_indirect_call_tools.py  test_kernel_types.py  test_malware_tools.py  test_module_dump.py  test_notes_sidecar.py  test_pdb_fetcher.py  test_rate_limit.py  test_review_tools.py  test_search_bytes.py  test_server.py  test_similarity_hashes.py  test_sse_server.py  test_stack_strings.py  test_structured_errors.py  test_triage_tools.py  test_vr_workflow.py  test_windbg_allowlist.py  test_windbg_bridge.py  test_windbg_event_callbacks.py  test_windbg_kernel_primitives.py  test_windbg_kernel_transports.py  test_windbg_parser.py  test_windbg_sympath.py
