[project]
name = "binary-mcp"
version = "0.2.0"
description = "MCP server for comprehensive binary analysis - static (Ghidra) and dynamic (x64dbg)"
authors = [
    {name = "Sarks0", email = "Sarks0@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "fastmcp>=0.2.0",
    "pefile>=2023.2.7",
    "pyelftools>=0.31",
    "requests>=2.31.0",
    "capstone>=5.0.0",
]

[project.optional-dependencies]
yara = [
    "yara-python>=4.5.0",
]
ghidra11 = [
    "pyhidra>=1.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Ghidra scripts now use Python 3 (PyGhidra), but still need F821 exemption for Ghidra globals
"src/engines/static/ghidra/scripts/*.py" = ["F821"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
